2006-01-12  Steve Grubb  <sgrubb@redhat.com>

	* configure.in: Add check for audit library.
	* libpam/Makefile.am (libpam_la_LDFLAGS): Add LIBAUDIT.
	(libpam_la_SOURCES): Add pam_audit.c.
	* libpam/pam_account.c (pam_acct_mgmt): Add _pam_auditlog() call.
	* libpam/pam_auth.c (pam_authenticate), (pam_setcred): Likewise.
	* libpam/pam_password.c (pam_chauthtok):  Likewise.
	* libpam/pam_session.c (pam_open_session),
	(pam_close_session): Likewise.
	* libpam/pam_private.h: Add audit_state member to pam_handle,
	declare _pam_auditlog and _pam_audit_end.
	* libpam/pam_start.c (pam_start): Initialize audit_state.
	* libpam/pam_audit.c: New file with _pam_auditlog and _pam_audit_end
	implementation.
	* libpam/pam_end.c (pam_end): Add _pam_audit_end() call.
	* NEWS: Note about added auditing.

2006-01-11  Thorsten Kukuk  <kukuk@thkukuk.de>

	* libpam/Makefile.am (AM_CFLAGS): Define LIBPAM_COMPILE.

	* libpam/include/security/_pam_types.h: Don't define PAM_NONNULL
	if we compile libpam itself.

	* po/hu.po: Update with new translations.

2006-01-08  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_cracklib/pam_cracklib.c: Use PAM_AUTHTOK_RECOVERY_ERR
	instead of PAM_AUTHTOK_RECOVER_ERR.
	* modules/pam_pwdb/support.-c: Likewise.
	* modules/pam_unix/support.c: Likewise.
	* modules/pam_userdb/pam_userdb.c (pam_sm_authenticate): Likewise.
	* libpam/pam_strerror.c (pam_strerror): Likewise.

	* libpam/include/security/_pam_compat.h: Define
	PAM_AUTHTOK_RECOVER_ERR for backward compatibility.

	* libpam/include/security/_pam_types.h: Rename
	PAM_AUTHTOK_RECOVER_ERR to PAM_AUTHTOK_RECOVERY_ERR.

2006-01-05  Thorsten Kukuk  <kukuk@thkukuk.de>

	* libpam/include/security/_pam_types.h: Remove nonnull attribute
	from third paramter (item) of pam_get_item.
	* libpam/Makefile.am: Bump version number of shared library.

2005-12-21  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_succeed_if/pam_succeed_if.c (evaluate_ingroup),
	(evaluate_notingroup): Simplified.