@@ -8,7 +8,7 @@ securelibfilterdir = $(SECUREDIR)/pam_filter
 
 
 AM_CFLAGS = -I$(top_srcdir)/libpam/include -I$(top_srcdir)/libpamc/include \
-	-I$(srcdir)/..
-AM_LDFLAGS = -L$(top_builddir)/libpam -lpam
+	-I$(srcdir)/.. @PIE_CFLAGS@
+AM_LDFLAGS = @PIE_LDFLAGS@ -L$(top_builddir)/libpam -lpam
 
 securelibfilter_PROGRAMS = upperLOWER
