@@ -1,9 +1,10 @@
 Linux-PAM NEWS -- history of user-visible changes.
 
 * Fix NULL pointer checks in libpam.so
-* pam_succeed_if, pam_group, pam_time: Support netgroup matching.
+* pam_succeed_if, pam_group, pam_time: Support netgroup matching
 * New translations for: nb, hu
 * Audit PAM calls if Linux Audit is available
+* Compile upperLOWER and unix_chkpwd as PIE binaries
 
 
 Release 0.99.2.1
